started working on products app

--- a/templates/master.html
+++ b/templates/master.html
@@ -239,11 +239,11 @@
                                    aria-haspopup="true" aria-expanded="false">Products</a>
                                 <ul class="dropdown-menu list-unstyled" aria-labelledby="dropdownBlog">
                                     <li>
-                                        <a href="blog-classic.html" class="dropdown-item item-anchor">Add products <span
+                                        <a href="{% url 'add-products-url' %}" class="dropdown-item item-anchor">Add products <span
                                                 class="badge bg-secondary">pro</span></a>
                                     </li>
                                     <li>
-                                        <a href="blog-grid-with-sidebar.html" class="dropdown-item item-anchor">View products <span
+                                        <a href="{% url 'products-url' %}" class="dropdown-item item-anchor">View products <span
                                                 class="badge bg-secondary">pro</span></a>
                                     </li>
                                     <li>
